# mingw-tests

./: .gitignore  CMakeLists.txt  README  env.sh  main.cpp
hello-qt-quick/: CMakeLists.txt  env.sh  main.qml  windeploy.sh
